test/corpus/class-item-variable.txt
================
Class - variable
================

class ClassVariableExample

simpleVarPrimitive : Int4
simpleVarRefto: refTo OtherClass
simpleVarListof: listOf AnotherClass
withRefMod : refTo [V, T, O, P, I, A] OtherClass
withRefModFullName : refTo [isVersioned, inTransaction, isOwner, isCurProject, isIntegral, isActive] OtherClass
withBackRef : refTo OtherClass inverse myExample
memory memVar : refTo OtherClass

---

(source_file
  (class
    name: (identifier)
    (variable_item
      name: (identifier)
      type: (type_identifier)
    )
    (variable_item
      name: (identifier)
      type: (reference (type_identifier))
    )
    (variable_item
      name: (identifier)
      type: (reference (type_identifier))
    )
    (variable_item
      name: (identifier)
      type: (reference
        (reference_modifiers)
        (type_identifier))
    )
    (variable_item
      name: (identifier)
      type: (reference
        (reference_modifiers)
        (type_identifier))
    )
    (variable_item
      name: (identifier)
      type: (reference (type_identifier))
      (variable_modifiers
        (inverse_modifiers backref: (identifier)))
    )
    (variable_item
      (memory_modifiers)
      name: (identifier)
      type: (reference (type_identifier))
    )
  )
)
