test/corpus/module-item-const.txt
=====
Const
=====

module Example

const INT1_MAX = 127
const INT1_MIN = -128
const SOME_STRING = 'abc'
const EMPTY_STRING = ''
const MESSAGE = 'This is a test message' multiLang
const TRUE = true
const FALSE = false
const SOME_TEXT = {
  'abc',
  'def',
}
const NULL = nil

---

(source_file
  (module
    name: (identifier)
    (const_item
      name: (identifier)
  	(integer_literal))
    (const_item
      name: (identifier)
      (integer_literal))
    (const_item
      name: (identifier)
      (string_literal))
    (const_item
      name: (identifier)
      (string_literal))
    (const_item
      name: (identifier)
      (string_literal)
      (const_modifiers))
    (const_item
      name: (identifier)
      (boolean_literal))
    (const_item
      name: (identifier)
      (boolean_literal))
    (const_item
      name: (identifier)
      (text_literal))
    (const_item
      name: (identifier)
      (nil_literal))
  )
)
