test/corpus/module-item-pointer.txt
============
Pointer type
============

module PointerTypeExample

type tpSomeType : .tSomeType
type tpInt4 : .int(4)

---

(source_file
  (module
    name: (identifier)
    (pointer_type_item
      name: (type_identifier)
      type: (type_identifier))
    (pointer_type_item
      name: (type_identifier)
      type: (type_primitive (sized)))
  )
)
